--- a/css/main.css
+++ b/css/main.css
@@ -237,9 +237,9 @@ header {
     display: inline-flex;
     align-items: center;
     justify-items: center;
-    /* margin: 0 auto;
+    margin: 0 auto;
     padding-top: 25px;
-    padding-bottom: 25px; */
+    padding-bottom: 25px;
   }
 
 .item .text{
