--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
     --bg-color:#F5F4FA;
     --logo-color:#000000;
     --bg-footer:#2F303A;
+    --svg-icon-color:#AFB1B8;
 }
 
 h1,
@@ -33,13 +34,6 @@ body {
     background: var(--btn-txt-color);
     
 }
-/* 
-.list{
-
-    padding: 0px;
-    margin: 0px;
-    list-style: none;
-} */
 
 .container {
     width: 1200px;
@@ -74,12 +68,14 @@ header {
 }
 
 /* Хедер */
+
 .main-nav{
     display: flex;
     align-items: center;
 }
 
     /* Логотип */
+
 .logo{
     color: var(--accent-color);
     font-family: raleway, sans-serif;
@@ -97,6 +93,7 @@ header {
 }
 
     /* Навигация */
+
 .site-nav{
     display: flex;
     margin-left: 85px;
@@ -110,7 +107,6 @@ header {
     display: block;
     color: var(--title-text-color);
     font-size: 14px;
-    
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -162,6 +158,7 @@ header {
 }
 
     /* Герой */
+
 .hero{
     max-width: 1600px;
     height: 600px;
@@ -215,12 +212,13 @@ header {
 }
   
     /* Преимущества */
+
 .advantages{
     padding-top: 94px;
     padding-bottom: 94px;
 }
 
-    .advant{
+.advant{
     display: flex;
     align-items: center;
 }
@@ -242,23 +240,22 @@ header {
     text-transform: uppercase;
     margin-bottom: 10px;
 }
+
 .item .item-image {
     background:var(--bg-color);
     height: 120px;
     border-radius: 4px;
     margin-bottom: 30px;
     padding: 25px 100px;
-  }
+}
+
 .item-image-icon  {
-    /* display: inline-flex;
+    display: inline-flex;
     align-items: center;
-    justify-items: center; */
-    /* margin: 0 auto; */
-    /* padding-top: 25px;
-    padding-bottom: 25px; */
+    justify-items: center;
     width: 70px;
     height: 70px;
-  }
+}
 
 .item .text{
     font-size: 14px;
@@ -267,7 +264,8 @@ header {
 }
 
     /* Чем мы занимаемся */
-    .section-works{
+
+.section-works{
     padding-bottom: 94px;
 }
 
@@ -363,14 +361,34 @@ header {
 .social-networks{
     display: flex;
     justify-content: space-evenly;
+    margin-left: 32px;
+    margin-right: 32px;
+    padding-bottom: 24px;
 }
 
-.social-networks .icon a{
-    display: block;
-    justify-content: space-evenly;
+.icon-meil{
+    display: flex;
+    align-items: center;
     width: 44px;
-    padding-bottom: 24px;
+    height: 44px;
     border-radius: 50%;
+    color: var(--svg-icon-color);;
+    background-color: var(--btn-txt-color);
+}
+
+.icon-meil:hover{
+    color: var(--btn-txt-color);
+    background: var(--accent-color);
+}
+
+.team-svg-icon{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
 }
 
 .social-networks .icon:not(:last-child){
@@ -403,7 +421,6 @@ header {
 
 .clients-item-icon{
     fill:currentColor;
-
 }
  
 .clients-item a:hover,
@@ -464,6 +481,7 @@ header {
 }
 
 /* Cоциальные сети */
+
 .footer-part .txt{
     display: block;
     margin-bottom: 20px;
@@ -492,7 +510,18 @@ header {
     margin-left: 69px;
 }
 
+.footer-social-networks{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.footer-social-networks li:not(:last-child){
+    margin-right: 10px;
+}
+
 .social-networks-button{
+    display: flex;
+    align-items: center;
     padding: 0;
     border: none;
     width: 44px;
@@ -505,12 +534,10 @@ header {
     background-color: var(--accent-color);
 }
 
-.social-networks li:not(:last-child){
-    margin-right: 10px;
-}
-
 .button-icon{
     fill: var(--btn-txt-color);
+    margin-left: auto;
+    margin-right: auto;
     width: 20px;
     height: 20px;
 }
@@ -519,26 +546,25 @@ header {
     margin-left: auto;
 }
 
-.mailing{
-    display: box;
-    margin-left: 464px;
+.mailing .btn{
+    display: flex;
+    align-items: center;
 }
 
-.mailing > .btn::after{
-    display: inline-flex;
-    content:"";
-    height: 24px;
-    width: 24px;
-    padding-top: 13px;
-    background-image: url(../img/icon_send.svg);
-    margin-left: 10px;
-    background-size: contain;
-    background-repeat: no-repeat;
+.btn-align{
+    display: flex;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.mailing-btn-svg{
+    margin-left: 10px;
     fill:currentColor;
 }
 
 /* Копирайт */
+
 footer > .copy{
     color: rgba(255, 255, 255, 0.4);
     background: var(--bg-footer);
@@ -552,14 +578,15 @@ footer > .copy{
     rgba(255, 255, 255, 0.1);
 }
    
-
 /* Портфолио-проекты */
+
 .section-projects{
     padding-top: 93px;
     padding-bottom: 94px;
     padding-right: 15px;
     padding-left: 15px;
 }
+
 .container-project{
     width: 1200px;
     margin-top: 0px;
