--- a/css/main.css
+++ b/css/main.css
@@ -292,7 +292,7 @@ header {
 }
 
 .work > .item:nth-child(1){
-    background-image: url(../img/img_1.jpg);
+    background-image: url(../img/img1.jpg);
 }
 
 .work > .item:nth-child(2){
@@ -614,7 +614,8 @@ footer > .copy{
 .project .button:focus{
     color: var(--btn-txt-color);
     background: var(--accent-color);
-    border-width: 2px;
+    border-width: 0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .portfolio{
