--- a/css/main.css
+++ b/css/main.css
@@ -616,6 +616,7 @@ footer > .copy{
     background: var(--accent-color);
     border-width: 0;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
 }
 
 .portfolio{
