--- a/css/main.css
+++ b/css/main.css
@@ -45,11 +45,6 @@ body {
     padding-left: 15px;
 }
 
-header {
-    padding-top: 24px;
-    padding-bottom: 25px;
-}
-
 .invisible-title{
    display: none;
 }
@@ -67,11 +62,12 @@ header {
     
 }
 
-/* Хедер */
+    /* Хедер */
 
 .main-nav{
     display: flex;
     align-items: center;
+    border-bottom: 1px solid #ECECEC;
 }
 
     /* Логотип */
@@ -82,6 +78,8 @@ header {
     font-size: 26px;
     font-weight: 700;
     text-decoration: none;
+    padding-top: 24px;
+    padding-bottom: 25px;
 }
 
 .logo .logo-first{
@@ -99,10 +97,6 @@ header {
     margin-left: 85px;
 }
 
-.site-nav .item:not(:last-child){
-    margin-right: 50px;
-}
-
 .site-nav .link{
     display: block;
     color: var(--title-text-color);
@@ -112,8 +106,13 @@ header {
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+    padding-top: 34px;
+    padding-bottom: 32px;
 }
 
+.site-nav .link:not(:last-child){
+    margin-right: 50px;
+}
 
 
 .site-nav .link:hover,
@@ -121,13 +120,27 @@ header {
     color: var(--accent-color);
 }
 
-.site-nav .link.current{
+.site-nav .current{
+    position: relative;
     color: var(--accent-color);
+}
+
+.site-nav .current::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
 }
 
 .auth-nav{
     display: flex;
     margin-left: auto;
+    padding-top: 34px;
+    padding-bottom: 30px;
 }
 
 .auth-nav .item a:not(:last-child){
@@ -161,7 +174,6 @@ header {
 
 .hero{
     max-width: 1600px;
-    height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
     margin-left: auto;
@@ -269,7 +281,6 @@ header {
     padding-bottom: 94px;
 }
 
-.section-works .section-title,
 .section-title{
     color: var(--title-text-color);
     font-size: 36px;
@@ -285,8 +296,8 @@ header {
 }
 
 .work > .item{
+    position: relative;
     display: flex;
-    align-items: flex-end;
     width: calc((100% - 30px * 2) / 3);
     height: 294px;
 }
@@ -304,15 +315,19 @@ header {
 }
 
 .work .item .title{
-    color: var(--btn-txt-color);
-    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height: 70px;
     padding: 27px 82px;
+    color: var(--btn-txt-color);
+    text-align: center;
     background: rgba(47, 48, 58, 0.8);
 }
 
     /* Команда */
+
 .section-team{
     padding-top: 94px;
     padding-bottom: 94px;
@@ -426,12 +441,13 @@ header {
 .clients-item a:hover,
 .clients-item a:focus{
     color: var(--accent-color);
-    border: solid var(--accent-color);
+    border: 1px solid var(--accent-color);
 }
 
     /* Футер */
 
     /* Адресс */
+
 .main-footer{
     background: var(--bg-footer);
     margin-left: auto;
@@ -480,7 +496,7 @@ header {
     color: var(--accent-color);
 }
 
-/* Cоциальные сети */
+    /* Cоциальные сети */
 
 .footer-part .txt{
     display: block;
@@ -553,7 +569,7 @@ header {
     fill: currentColor;
 }
 
-/* Копирайт */
+    /* Копирайт */
 
 footer > .copy{
     color: rgba(255, 255, 255, 0.4);
@@ -568,7 +584,7 @@ footer > .copy{
     rgba(255, 255, 255, 0.1);
 }
    
-/* Портфолио-проекты */
+    /* Портфолио-проекты */
 
 .section-projects{
     padding-top: 93px;
@@ -633,6 +649,11 @@ footer > .copy{
     margin-right: 30px;
     margin-bottom: 30px;
     border: 1px solid #EEEEEE;
+    
+}
+
+.works-items:hover{
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .works .works-items:nth-child(3n){
@@ -644,7 +665,12 @@ footer > .copy{
 }
 
 .works-items .works-link{
+    display: inline-block;
     text-decoration: none;
+}
+
+.works-link-img{
+    width: 100%;
 }
 
 .work-info{
@@ -660,17 +686,31 @@ footer > .copy{
     margin-bottom: 4px;
 }
 
-.list .sub{
+.work-info>.sub{
     color: var(--primary-text-color);
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
 }
 
-.list .txt{
+.works-link-activ{
+    position: relative;
+}
+
+.works-link-activ>.txt{
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 294px;
     color: var(--btn-txt-color);
     background: var(--accent-color);
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
+    padding: 63px 24px;
+    opacity: 0;
+}
+.works-items:hover .txt{
+    opacity: 1;
 }
